# folio-backend

./: .env.example  Cargo.toml  README.md
migrations/: 0001_init.sql  20241120140000_seed_data.sql
src/: config.rs  db.rs  error.rs  main.rs
src/models/: content.rs  mod.rs
src/routes/: content.rs  mod.rs  skills.rs
