[package]
name = "folio-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
dotenvy = "0.15"
tower-http = { version = "0.5.2", features = ["cors"] }
html-escape = "0.2.13"
validator = { version = "0.19", features = ["derive"] }
tower_governor = "0.4"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite"] }